--- a/Verslag/verslagDegrèveMöllmann.tex
+++ b/Verslag/verslagDegrèveMöllmann.tex
@@ -271,19 +271,14 @@ Op deze plot is duidelijk te herkennen dat Kavg een positief lineair verband hee
 \subsection{figuur 7}
 
 In figuur 7 zullen we het verband tussen het aantal dimensies en Kmax plotten.
-
-
+Op de x-as zetten we het aantal dimensies uit van 2 tot 19.
+Op de y-as zetten we de Kmax uit.
+We kunnen een duidelijk positief lineair verband tussen Kmax en het aantal dimensies waarnemen.
 
 \begin{figure}
 \includegraphics[width=\textwidth]{dim-Kmax.png}
 \caption{De plot tussen het aantal dimensies en Kmax (voor 2500 punten)}
 \end{figure}
-
-
-
-
-
-
 
 
 
